microservice-hack-authentication-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hack-authentication-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hack-authentication
  template:
    metadata:
      name: hack-authentication-pod
      labels:
        app: hack-authentication-pod
    spec:
      containers:
        - name: hack-authentication-container
          image: tsrocha901/microservice-fiap-hack-authentication:latest
          ports:
            - containerPort: 3333
          resources:
            requests:
              cpu: 10m
  selector:
    matchLabels:
      app: hack-authentication-pod
