microservice-hack-authentication-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hack-authentication-service
spec:
  selector:
    app: hack-authentication-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3333
