microservice-hack-notification-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hack-notification-service
spec:
  selector:
    app: hack-notification-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3333
