microservice-hack-send-videos-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hack-send-videos-service
spec:
  selector:
    app: hack-send-videos-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3333
