ingress.controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hack-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /service-auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hack-authentication-service
                port:
                  number: 80
          - path: /service-videos(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hack-send-videos-service
                port:
                  number: 80
